extend video substemp tot2

--- a/notebooks/Read_ece_ts_oceantemp.ipynb
+++ b/notebooks/Read_ece_ts_oceantemp.ipynb
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9b7ecfcd-8d06-46be-b186-f8930c0ec3e1",
+   "execution_count": 7,
+   "id": "8d46d7fb-6f88-4cae-adcb-668127be6b51",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "390 months =  32 y 6 m\n",
-      "Saved ../data/temperature_mon_tot2.nc                                                                                      \n"
+      "403 months =  33 y 7 m\n",
+      "402 [ 1.01  0.88  1.57 -0.89 -0.17 -1.04  1.05]                                                                            \r"
      ]
     }
    ],
@@ -121,14 +121,32 @@
     "        for b,bas in enumerate(volume.basin):\n",
     "            tbas[c,b] = np.nansum(temp[m,:,:,:]*volume.sel(basin=bas))/np.nansum(volume.sel(basin=bas))\n",
     "        print(f'{c:3.0f}',tbas[c,:],end='                                                \\r')\n",
-    "        c += 1\n",
-    "        \n",
+    "        c += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "88a7f879-8a8e-403c-9338-089f7ecd004b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved ../data/temperature_mon_tot2.nc                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Save data\n",
+    "\n",
     "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':volume.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
     "ds = xr.Dataset({'temp':temp2})\n",
     "savename = f'../data/temperature_mon_{rrun}.nc'\n",
     "ds.to_netcdf(savename,mode='w')\n",
     "ds.close()\n",
-    "print('Saved',savename,'                                     ')"
+    "print('Saved',savename)"
    ]
   },
   {
