--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -35,42 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runn = 'tot2'\n",
-    "jmax = 55\n",
-    "olev = 36"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "52f10b66-d9b6-49b1-9b5b-bec8ede84dac",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#Get time-independent variables\n",
-    "ds = xr.open_dataset('../data/ecefiles/areas.nc')\n",
-    "area = ds['O1t0.srf'].values;\n",
-    "ds.close()\n",
+    "#General input params\n",
     "\n",
-    "fnames = sorted(glob.glob(f'../data/ecefiles/n011/n011*.nc'))\n",
-    "\n",
-    "ds = xr.open_dataset(fnames[0])\n",
-    "lat = ds['nav_lat'].values\n",
-    "lon = ds['nav_lon'].values\n",
-    "levmid = ds['olevel'].values\n",
-    "lev = ds['olevel_bounds'].values\n",
-    "time_bnds = ds['time_centered_bounds']\n",
-    "thick = ds['e3t'].values #Quasi-time-independent, treated as fixed\n",
-    "\n",
-    "ds.close()\n",
-    "secs = (time_bnds[:12,1]-time_bnds[:12,0]).values / np.timedelta64(1, 's')\n",
-    "\n",
-    "months = np.arange(0,12)"
+    "run  = 'tot2'  # New run to be compared to control\n",
+    "jmax = 55      # Maximum j index for northern latitudinal extent\n",
+    "olev = 36      # Depth index, 34 = 300m, 36 = 370m"
    ]
   },
   {
@@ -84,9 +53,9 @@
     "    fnames = sorted(glob.glob(f'../data/ecefiles/{run}/{run}*T.nc'))\n",
     "    if run == 'n011':\n",
     "        fnames = fnames[38:] #Omit the first 100 years which is spin up\n",
-    "        rrun = 'ctrl'\n",
-    "    else:\n",
-    "        rrun = run\n",
+    "    #    rrun = 'ctrl'\n",
+    "    #else:\n",
+    "    #    rrun = run\n",
     "\n",
     "    nmonths = 0\n",
     "    for fname in fnames:\n",
@@ -94,8 +63,8 @@
     "        nmonths += len(ds.time_counter)\n",
     "        ds.close()\n",
     "    nyears = int(np.floor(nmonths/12))\n",
-    "    print(rrun,nmonths, 'months =',nyears,'y',int(nmonths-12*nyears),'m')\n",
-    "    return fnames,nmonths,nyears,rrun"
+    "    print(run,nmonths, 'months =',nyears,'y',int(nmonths-12*nyears),'m')\n",
+    "    return fnames,nmonths"
    ]
   },
   {
@@ -111,6 +80,7 @@
     "mask = ds.mask\n",
     "basin = ds.basin.values\n",
     "ds.close()\n",
+    "\n",
     "mask = np.nansum(mask,axis=1)"
    ]
   },
@@ -121,20 +91,32 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tot2' 'n011']\n",
+      "403 33 7\n"
+     ]
+    }
+   ],
    "source": [
-    "runs = np.append(['n011'],runn)\n",
+    "runs = np.append([run],'n011')\n",
     "\n",
     "ds = xr.open_dataset(f'../data/temperature_mon_ctrl.nc').isel(basin=slice(0,5))\n",
     "tempc = ds.temp\n",
     "ds.close()\n",
     "\n",
-    "ds = xr.open_dataset(f'../data/temperature_mon_{runn}.nc').isel(basin=slice(0,5))\n",
+    "ds = xr.open_dataset(f'../data/temperature_mon_{run}.nc').isel(basin=slice(0,5))\n",
     "time = ds.time.values/12\n",
     "tempr = ds.temp\n",
     "ds.close()\n",
     "\n",
-    "dtemp = tempr-tempc[:len(time)]"
+    "dtemp = tempr-tempc[:len(time)]\n",
+    "nmonths = len(time)\n",
+    "nyears = int(np.floor(nmonths/12))\n",
+    "print(nmonths,nyears,nmonths-12*nyears)"
    ]
   },
   {
@@ -149,39 +131,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tot2 390 months = 32 y 6 m\n",
-      "ctrl 2400 months = 200 y 0 m\n",
-      "tot2 390 months = 32 y 6 m\n"
+      "tot2 403 months = 33 y 7 m\n",
+      "n011 2400 months = 200 y 0 m\n"
      ]
     }
    ],
    "source": [
-    "fnames,nmonthsr,nyears,rrun = get_fnames(runn)\n",
-    "ds = xr.open_dataset(fnames[0]).isel(y=slice(0,jmax))\n",
-    "lat = ds['nav_lat'].values\n",
-    "lon = ds['nav_lon'].values\n",
-    "ds.close()\n",
-    "\n",
     "var = {}\n",
-    "for run in runs:\n",
-    "    fnames,nmonths,nyears,rrun = get_fnames(run)\n",
-    "    var[run] = np.zeros((nmonthsr,lon.shape[0],lon.shape[1]))\n",
+    "for rn in runs:\n",
+    "    fnames,nmon = get_fnames(rn)\n",
+    "    if rn==run:\n",
+    "        assert nmon==nmonths,'Need to run Read_ece_ts_oceantemp'\n",
+    "    var[rn] = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
     "    c = -1\n",
     "    for fname in fnames:\n",
     "        ds = xr.open_dataset(fname).isel(y=slice(0,jmax))\n",
     "        for t,tt in enumerate(ds['time_counter'].values):\n",
     "            c+=1\n",
-    "            if c>=nmonthsr:\n",
+    "            if c>=nmonths:\n",
     "                break\n",
-    "            var[run][c,:,:] = ds['thetao'].isel(olevel=olev,time_counter=t)\n",
-    "        if c>=nmonthsr:\n",
+    "            var[rn][c,:,:] = ds['thetao'].isel(olevel=olev,time_counter=t)\n",
+    "        ds.close()\n",
+    "        if c>=nmonths:\n",
     "            break\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "3f4a8029-9d95-405f-ae51-20b8082ef0b9",
    "metadata": {},
    "outputs": [],
@@ -190,14 +168,20 @@
     "vmin = -1\n",
     "vmax = 1\n",
     "\n",
-    "mpl.rcParams['figure.figsize'] = (15,5)\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .25\n",
-    "mpl.rcParams['figure.subplot.hspace'] = .1"
+    "mpl.rcParams['figure.figsize'] = (16,5)\n",
+    "mpl.rcParams['figure.subplot.wspace'] = .1\n",
+    "mpl.rcParams['figure.subplot.hspace'] = .01\n",
+    "mpl.rcParams['figure.subplot.left'] = .01\n",
+    "mpl.rcParams['figure.subplot.right'] = .99\n",
+    "mpl.rcParams['figure.subplot.bottom'] = .1\n",
+    "mpl.rcParams['figure.subplot.top'] = .9\n",
+    "\n",
+    "mnames = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "ef333911-f007-4500-970f-f1f46e4d77c4",
    "metadata": {
     "tags": []
@@ -207,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 9 of 390 months\r"
+      "Saved 402 of 403 months\r"
      ]
     },
     {
@@ -227,43 +211,43 @@
       "  libswresample   3.  7.100 /  3.  7.100\n",
       "  libpostproc    55.  7.100 / 55.  7.100\n",
       "Input #0, image2, from '../videos/substemp_tot2_mon_%04d.png':\n",
-      "  Duration: 00:00:01.54, start: 0.000000, bitrate: N/A\n",
-      "    Stream #0:0: Video: png, rgba(pc), 2250x750 [SAR 5906:5906 DAR 3:1], 6.50 fps, 6.50 tbr, 6.50 tbn, 6.50 tbc\n",
+      "  Duration: 00:01:00.00, start: 0.000000, bitrate: N/A\n",
+      "    Stream #0:0: Video: png, rgba(pc), 2400x750 [SAR 5906:5906 DAR 16:5], 6.75 fps, 6.72 tbr, 6.72 tbn, 6.72 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "[libx264 @ 0x55bc5f38d340] using SAR=1/1\n",
-      "[libx264 @ 0x55bc5f38d340] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x55bc5f38d340] profile High, level 4.0, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x55bc5f38d340] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=6 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "[libx264 @ 0x556ce310d680] using SAR=1/1\n",
+      "[libx264 @ 0x556ce310d680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x556ce310d680] profile High, level 4.0, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x556ce310d680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=6 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mp4, to '../videos/substemp_tot2_mon.mp4':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.45.100\n",
-      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 2250x750 [SAR 1:1 DAR 3:1], q=-1--1, 6.50 fps, 13312 tbn, 6.50 tbc\n",
+      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 2400x750 [SAR 1:1 DAR 16:5], q=-1--1, 6.72 fps, 12896 tbn, 6.72 tbc\n",
       "    Metadata:\n",
       "      encoder         : Lavc58.91.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=   10 fps=0.0 q=-1.0 Lsize=      87kB time=00:00:01.07 bitrate= 664.6kbits/s speed=8.97x    \n",
-      "video:86kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 1.103980%\n",
-      "[libx264 @ 0x55bc5f38d340] frame I:1     Avg QP:20.40  size: 47522\n",
-      "[libx264 @ 0x55bc5f38d340] frame P:3     Avg QP:22.65  size:  6674\n",
-      "[libx264 @ 0x55bc5f38d340] frame B:6     Avg QP:20.50  size:  3378\n",
-      "[libx264 @ 0x55bc5f38d340] consecutive B-frames: 20.0%  0.0%  0.0% 80.0%\n",
-      "[libx264 @ 0x55bc5f38d340] mb I  I16..4: 22.1% 64.6% 13.4%\n",
-      "[libx264 @ 0x55bc5f38d340] mb P  I16..4:  0.4%  3.1%  0.7%  P16..4:  3.8%  1.1%  0.5%  0.0%  0.0%    skip:90.3%\n",
-      "[libx264 @ 0x55bc5f38d340] mb B  I16..4:  0.2%  0.7%  0.1%  B16..8:  5.3%  1.2%  0.3%  direct: 0.9%  skip:91.3%  L0:48.7% L1:47.3% BI: 4.0%\n",
-      "[libx264 @ 0x55bc5f38d340] 8x8 transform intra:65.9% inter:77.8%\n",
-      "[libx264 @ 0x55bc5f38d340] coded y,uvDC,uvAC intra: 14.9% 15.2% 7.7% inter: 2.5% 2.1% 0.4%\n",
-      "[libx264 @ 0x55bc5f38d340] i16 v,h,dc,p: 68% 19%  9%  4%\n",
-      "[libx264 @ 0x55bc5f38d340] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 52% 12% 28%  1%  2%  1%  2%  1%  1%\n",
-      "[libx264 @ 0x55bc5f38d340] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 42% 18% 16%  4%  4%  5%  4%  3%  4%\n",
-      "[libx264 @ 0x55bc5f38d340] i8c dc,h,v,p: 85%  7%  6%  2%\n",
-      "[libx264 @ 0x55bc5f38d340] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x55bc5f38d340] ref P L0: 62.7% 15.0% 16.4%  5.9%\n",
-      "[libx264 @ 0x55bc5f38d340] ref B L0: 78.1% 19.1%  2.7%\n",
-      "[libx264 @ 0x55bc5f38d340] ref B L1: 94.4%  5.6%\n",
-      "[libx264 @ 0x55bc5f38d340] kb/s:456.61\n"
+      "frame=  403 fps=126 q=-1.0 Lsize=    3304kB time=00:00:59.55 bitrate= 454.5kbits/s speed=18.6x    \n",
+      "video:3298kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.169835%\n",
+      "[libx264 @ 0x556ce310d680] frame I:2     Avg QP:14.36  size: 96636\n",
+      "[libx264 @ 0x556ce310d680] frame P:101   Avg QP:21.55  size: 16378\n",
+      "[libx264 @ 0x556ce310d680] frame B:300   Avg QP:26.17  size:  5098\n",
+      "[libx264 @ 0x556ce310d680] consecutive B-frames:  0.7%  0.0%  0.0% 99.3%\n",
+      "[libx264 @ 0x556ce310d680] mb I  I16..4: 35.2% 47.6% 17.2%\n",
+      "[libx264 @ 0x556ce310d680] mb P  I16..4:  0.3%  2.0%  0.7%  P16..4:  5.1%  3.3%  1.9%  0.0%  0.0%    skip:86.7%\n",
+      "[libx264 @ 0x556ce310d680] mb B  I16..4:  0.0%  0.3%  0.1%  B16..8:  4.6%  1.4%  0.7%  direct: 1.8%  skip:91.2%  L0:44.3% L1:42.3% BI:13.4%\n",
+      "[libx264 @ 0x556ce310d680] 8x8 transform intra:62.5% inter:70.2%\n",
+      "[libx264 @ 0x556ce310d680] coded y,uvDC,uvAC intra: 45.3% 51.4% 35.1% inter: 4.3% 3.7% 1.2%\n",
+      "[libx264 @ 0x556ce310d680] i16 v,h,dc,p: 65% 15%  6% 14%\n",
+      "[libx264 @ 0x556ce310d680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 23% 12% 30%  4%  7%  8%  6%  5%  5%\n",
+      "[libx264 @ 0x556ce310d680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 14% 19%  6%  7%  8%  7%  6%  6%\n",
+      "[libx264 @ 0x556ce310d680] i8c dc,h,v,p: 61% 13% 15% 12%\n",
+      "[libx264 @ 0x556ce310d680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x556ce310d680] ref P L0: 51.5% 13.2% 20.1% 15.2%\n",
+      "[libx264 @ 0x556ce310d680] ref B L0: 82.1% 13.0%  4.8%\n",
+      "[libx264 @ 0x556ce310d680] ref B L1: 95.8%  4.2%\n",
+      "[libx264 @ 0x556ce310d680] kb/s:450.23\n"
      ]
     },
     {
@@ -272,7 +256,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,10 +264,10 @@
    "source": [
     "prefix = f'substemp_{run}_mon'\n",
     "\n",
-    "framerate = nmonthsr/60\n",
+    "framerate = nmonths/60\n",
     "\n",
-    "for m in range(0,10):\n",
-    "#for m in range(nmonthsr):\n",
+    "#for m in range(0,2):\n",
+    "for m in range(nmonths):\n",
     "    fig = plt.figure()\n",
     "    \n",
     "    ax = fig.add_subplot(131,projection=ccrs.SouthPolarStereo())\n",
@@ -321,9 +305,13 @@
     "    ax.set_title('Subsurface ocean temperature anomaly [degC]')\n",
     "    ax.set_xlabel('Years')\n",
     "\n",
+    "    y2d = int(np.floor(m/12))\n",
+    "    m2d = int(m-12*y2d)\n",
+    "    fig.suptitle(f'{mnames[m2d]} {y2d:03.0f} of {nyears:03.0f}')\n",
+    "    \n",
     "    savename = f'../videos/{prefix}_{m:04.0f}.png'\n",
-    "    plt.savefig(savename,dpi=150)\n",
-    "    print('Saved',m,'of',nmonthsr,'months',end='\\r')\n",
+    "    plt.savefig(savename,dpi=150,facecolor='w',transparent=False)\n",
+    "    print('Saved',m,'of',nmonths,'months',end='\\r')\n",
     "    plt.close()\n",
     "    \n",
     "os.system(f'ffmpeg -y -r {framerate} -f image2 -s 1920x1080 -i ../videos/{prefix}_%04d.png -vcodec libx264 -crf 25  -pix_fmt yuv420p ../videos/{prefix}.mp4')\n",
