--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "3f4a8029-9d95-405f-ae51-20b8082ef0b9",
    "metadata": {},
    "outputs": [],
@@ -168,8 +168,8 @@
     "vmin = -1\n",
     "vmax = 1\n",
     "\n",
-    "mpl.rcParams['figure.figsize'] = (16,5)\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .1\n",
+    "mpl.rcParams['figure.figsize'] = (10,5)\n",
+    "mpl.rcParams['figure.subplot.wspace'] = .15\n",
     "mpl.rcParams['figure.subplot.hspace'] = .01\n",
     "mpl.rcParams['figure.subplot.left'] = .01\n",
     "mpl.rcParams['figure.subplot.right'] = .99\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "ef333911-f007-4500-970f-f1f46e4d77c4",
    "metadata": {
     "tags": []
@@ -212,42 +212,42 @@
       "  libpostproc    55.  7.100 / 55.  7.100\n",
       "Input #0, image2, from '../videos/substemp_tot2_mon_%04d.png':\n",
       "  Duration: 00:01:00.00, start: 0.000000, bitrate: N/A\n",
-      "    Stream #0:0: Video: png, rgba(pc), 2400x750 [SAR 5906:5906 DAR 16:5], 6.75 fps, 6.72 tbr, 6.72 tbn, 6.72 tbc\n",
+      "    Stream #0:0: Video: png, rgba(pc), 1500x750 [SAR 5906:5906 DAR 2:1], 6.75 fps, 6.72 tbr, 6.72 tbn, 6.72 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "[libx264 @ 0x556ce310d680] using SAR=1/1\n",
-      "[libx264 @ 0x556ce310d680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x556ce310d680] profile High, level 4.0, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x556ce310d680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=6 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "[libx264 @ 0x55f930b49680] using SAR=1/1\n",
+      "[libx264 @ 0x55f930b49680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x55f930b49680] profile High, level 3.2, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x55f930b49680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=6 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mp4, to '../videos/substemp_tot2_mon.mp4':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.45.100\n",
-      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 2400x750 [SAR 1:1 DAR 16:5], q=-1--1, 6.72 fps, 12896 tbn, 6.72 tbc\n",
+      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1500x750 [SAR 1:1 DAR 2:1], q=-1--1, 6.72 fps, 12896 tbn, 6.72 tbc\n",
       "    Metadata:\n",
       "      encoder         : Lavc58.91.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=  403 fps=126 q=-1.0 Lsize=    3304kB time=00:00:59.55 bitrate= 454.5kbits/s speed=18.6x    \n",
-      "video:3298kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.169835%\n",
-      "[libx264 @ 0x556ce310d680] frame I:2     Avg QP:14.36  size: 96636\n",
-      "[libx264 @ 0x556ce310d680] frame P:101   Avg QP:21.55  size: 16378\n",
-      "[libx264 @ 0x556ce310d680] frame B:300   Avg QP:26.17  size:  5098\n",
-      "[libx264 @ 0x556ce310d680] consecutive B-frames:  0.7%  0.0%  0.0% 99.3%\n",
-      "[libx264 @ 0x556ce310d680] mb I  I16..4: 35.2% 47.6% 17.2%\n",
-      "[libx264 @ 0x556ce310d680] mb P  I16..4:  0.3%  2.0%  0.7%  P16..4:  5.1%  3.3%  1.9%  0.0%  0.0%    skip:86.7%\n",
-      "[libx264 @ 0x556ce310d680] mb B  I16..4:  0.0%  0.3%  0.1%  B16..8:  4.6%  1.4%  0.7%  direct: 1.8%  skip:91.2%  L0:44.3% L1:42.3% BI:13.4%\n",
-      "[libx264 @ 0x556ce310d680] 8x8 transform intra:62.5% inter:70.2%\n",
-      "[libx264 @ 0x556ce310d680] coded y,uvDC,uvAC intra: 45.3% 51.4% 35.1% inter: 4.3% 3.7% 1.2%\n",
-      "[libx264 @ 0x556ce310d680] i16 v,h,dc,p: 65% 15%  6% 14%\n",
-      "[libx264 @ 0x556ce310d680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 23% 12% 30%  4%  7%  8%  6%  5%  5%\n",
-      "[libx264 @ 0x556ce310d680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 14% 19%  6%  7%  8%  7%  6%  6%\n",
-      "[libx264 @ 0x556ce310d680] i8c dc,h,v,p: 61% 13% 15% 12%\n",
-      "[libx264 @ 0x556ce310d680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x556ce310d680] ref P L0: 51.5% 13.2% 20.1% 15.2%\n",
-      "[libx264 @ 0x556ce310d680] ref B L0: 82.1% 13.0%  4.8%\n",
-      "[libx264 @ 0x556ce310d680] ref B L1: 95.8%  4.2%\n",
-      "[libx264 @ 0x556ce310d680] kb/s:450.23\n"
+      "frame=  403 fps=189 q=-1.0 Lsize=    3019kB time=00:00:59.55 bitrate= 415.3kbits/s speed=  28x    \n",
+      "video:3013kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.185644%\n",
+      "[libx264 @ 0x55f930b49680] frame I:2     Avg QP:15.12  size: 71914\n",
+      "[libx264 @ 0x55f930b49680] frame P:101   Avg QP:21.40  size: 15142\n",
+      "[libx264 @ 0x55f930b49680] frame B:300   Avg QP:26.21  size:  4705\n",
+      "[libx264 @ 0x55f930b49680] consecutive B-frames:  0.7%  0.0%  0.0% 99.3%\n",
+      "[libx264 @ 0x55f930b49680] mb I  I16..4: 28.9% 50.6% 20.5%\n",
+      "[libx264 @ 0x55f930b49680] mb P  I16..4:  0.3%  3.0%  0.9%  P16..4:  8.2%  4.9%  2.8%  0.0%  0.0%    skip:79.8%\n",
+      "[libx264 @ 0x55f930b49680] mb B  I16..4:  0.0%  0.4%  0.1%  B16..8:  6.9%  2.0%  1.0%  direct: 2.7%  skip:86.9%  L0:44.3% L1:42.3% BI:13.4%\n",
+      "[libx264 @ 0x55f930b49680] 8x8 transform intra:67.0% inter:69.9%\n",
+      "[libx264 @ 0x55f930b49680] coded y,uvDC,uvAC intra: 48.5% 54.5% 37.6% inter: 6.4% 5.4% 1.9%\n",
+      "[libx264 @ 0x55f930b49680] i16 v,h,dc,p: 57% 15% 10% 19%\n",
+      "[libx264 @ 0x55f930b49680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 19% 11% 33%  4%  7%  8%  7%  5%  5%\n",
+      "[libx264 @ 0x55f930b49680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 13% 19%  6%  7%  8%  7%  7%  5%\n",
+      "[libx264 @ 0x55f930b49680] i8c dc,h,v,p: 57% 15% 16% 13%\n",
+      "[libx264 @ 0x55f930b49680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x55f930b49680] ref P L0: 53.5% 12.7% 19.1% 14.7%\n",
+      "[libx264 @ 0x55f930b49680] ref B L0: 82.6% 12.7%  4.7%\n",
+      "[libx264 @ 0x55f930b49680] ref B L1: 95.7%  4.3%\n",
+      "[libx264 @ 0x55f930b49680] kb/s:411.30\n"
      ]
     },
     {
@@ -256,7 +256,7 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,23 +266,13 @@
     "\n",
     "framerate = nmonths/60\n",
     "\n",
-    "#for m in range(0,2):\n",
+    "#for m in range(nmonths-2,nmonths):\n",
     "for m in range(nmonths):\n",
     "    fig = plt.figure()\n",
-    "    \n",
-    "    ax = fig.add_subplot(131,projection=ccrs.SouthPolarStereo())\n",
-    "    ax.set_extent([-180, 180, -80, -60], crs=ccrs.PlateCarree())\n",
-    "    for b,bas in enumerate(basin):\n",
-    "        ax.scatter(lon,lat,15*mask[b,:,:],c=ut.bcol[bas],lw=0,transform=ccrs.PlateCarree())\n",
-    "\n",
-    "    ax.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
-    "    ax.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
     "        \n",
-    "    ax.set_title('Five ocean regions')\n",
-    "        \n",
-    "    ax = fig.add_subplot(132,projection=ccrs.SouthPolarStereo())\n",
-    "    ax.set_extent([-180, 180, -80, -60], crs=ccrs.PlateCarree())\n",
-    "    im = ax.scatter(lon,lat,15,c=var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
+    "    ax = fig.add_subplot(121,projection=ccrs.SouthPolarStereo())\n",
+    "    ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
+    "    im = ax.scatter(lon,lat,5,c=var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "    #im = ax.pcolormesh(lon[:,1:-1],lat[:,1:-1],var['tot2'][m,:,1:-1]-var['n011'][m,:,1:-1],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "    #im = ax.pcolormesh(lon,lat,var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "\n",
@@ -292,9 +282,10 @@
     "    axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
     "    cb = fig.colorbar(im, cax=axins)\n",
     "    \n",
-    "    ax.set_title('Temperature at 370m depth [degC]')\n",
+    "    ax.set_title('Temperature anomaly at 370m depth [degC]')\n",
+    "    ax.set_axis_off()\n",
     "    \n",
-    "    ax = fig.add_subplot(133)\n",
+    "    ax = fig.add_subplot(122)\n",
     "    ax.axhline(0,0,1,color='.5',ls=':')\n",
     "    for b,bas in enumerate(basin):\n",
     "        ax.plot(time[:m+1],dtemp.sel(basin=bas)[:m+1],c=ut.bcol[bas])\n",
@@ -305,6 +296,15 @@
     "    ax.set_title('Subsurface ocean temperature anomaly [degC]')\n",
     "    ax.set_xlabel('Years')\n",
     "\n",
+    "    axins = inset_axes(ax,width=\"30%\",height=\"30%\",loc='lower left',borderpad=0,axes_class=cartopy.mpl.geoaxes.GeoAxes,axes_kwargs=dict(map_projection=cartopy.crs.SouthPolarStereo()))\n",
+    "    axins.set_extent([-180, 180, -80, -60], crs=ccrs.PlateCarree())\n",
+    "    for b,bas in enumerate(basin):\n",
+    "        axins.scatter(lon,lat,5*mask[b,:,:],c=ut.bcol[bas],lw=0,transform=ccrs.PlateCarree())\n",
+    "\n",
+    "    axins.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
+    "    axins.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
+    "    axins.set_axis_off()\n",
+    "    \n",
     "    y2d = int(np.floor(m/12))\n",
     "    m2d = int(m-12*y2d)\n",
     "    fig.suptitle(f'{mnames[m2d]} {y2d:03.0f} of {nyears:03.0f}')\n",
