--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a528c72f-4da5-4376-b714-7ec77127d363",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ca68a47-307a-45ad-85cd-cd4665331846",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "48deb197-90c5-4b1c-a347-e7d66a723423",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9d0fe34a-99b0-41ba-ab52-9d80f0e31264",
    "metadata": {},
    "outputs": [],
@@ -86,12 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dd6513f6-d963-469c-be79-a49240299e83",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "492 41 0\n"
+     ]
+    }
+   ],
    "source": [
     "runs = np.append([run],'n011')\n",
     "\n",
@@ -112,12 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "186293c3-7d9e-45aa-857f-83ccc8421107",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tot2 492 months = 41 y 0 m\n",
+      "n011 2400 months = 200 y 0 m\n"
+     ]
+    }
+   ],
    "source": [
     "var = {}\n",
     "for rn in runs:\n",
@@ -141,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3f4a8029-9d95-405f-ae51-20b8082ef0b9",
    "metadata": {},
    "outputs": [],
@@ -163,13 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef333911-f007-4500-970f-f1f46e4d77c4",
+   "execution_count": 8,
+   "id": "e30d641f-f1a7-40ee-908e-2469739a9fdf",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 491 of 492 months\r"
+     ]
+    }
+   ],
    "source": [
+    "#Save frames\n",
+    "\n",
     "prefix = f'substemp_{run}_mon'\n",
     "\n",
     "framerate = nmonths/60\n",
@@ -221,7 +248,86 @@
     "    plt.savefig(savename,dpi=150,facecolor='w',transparent=False)\n",
     "    print('Saved',m,'of',nmonths,'months',end='\\r')\n",
     "    plt.close()\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9756b7e2-fe9d-481f-b20b-70d0d8fb3771",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.3.2 Copyright (c) 2000-2021 the FFmpeg developers\n",
+      "  built with gcc 10 (GCC)\n",
+      "  configuration: --prefix=/usr --bindir=/usr/bin --datadir=/usr/share/ffmpeg --docdir=/usr/share/doc/ffmpeg --incdir=/usr/include/ffmpeg --libdir=/usr/lib64 --mandir=/usr/share/man --arch=x86_64 --optflags='-O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection' --extra-ldflags='-Wl,-z,relro -Wl,--as-needed -Wl,-z,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld ' --extra-cflags=' -I/usr/include/rav1e' --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-version3 --enable-bzlib --disable-crystalhd --enable-fontconfig --enable-frei0r --enable-gcrypt --enable-gnutls --enable-ladspa --enable-libaom --enable-libdav1d --enable-libass --enable-libbluray --enable-libcdio --enable-libdrm --enable-libjack --enable-libfreetype --enable-libfribidi --enable-libgsm --enable-liblensfun --enable-libmp3lame --enable-libmysofa --enable-nvenc --enable-openal --enable-opencl --enable-opengl --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librav1e --enable-libsmbclient --enable-version3 --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libvorbis --enable-libv4l2 --enable-libvidstab --enable-libvmaf --enable-version3 --enable-vapoursynth --enable-libvpx --enable-vulkan --enable-libglslang --enable-libx264 --enable-libx265 --enable-libxvid --enable-libxml2 --enable-libzimg --enable-libzvbi --enable-lv2 --enable-avfilter --enable-avresample --enable-libmodplug --enable-postproc --enable-pthreads --disable-static --enable-shared --enable-gpl --disable-debug --disable-stripping --shlibdir=/usr/lib64 --enable-lto --enable-libmfx --enable-runtime-cpudetect\n",
+      "  libavutil      56. 51.100 / 56. 51.100\n",
+      "  libavcodec     58. 91.100 / 58. 91.100\n",
+      "  libavformat    58. 45.100 / 58. 45.100\n",
+      "  libavdevice    58. 10.100 / 58. 10.100\n",
+      "  libavfilter     7. 85.100 /  7. 85.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  7.100 /  5.  7.100\n",
+      "  libswresample   3.  7.100 /  3.  7.100\n",
+      "  libpostproc    55.  7.100 / 55.  7.100\n",
+      "Input #0, image2, from '../videos/substemp_tot2_mon_%04d.png':\n",
+      "  Duration: 00:01:00.00, start: 0.000000, bitrate: N/A\n",
+      "    Stream #0:0: Video: png, rgba(pc), 1500x750 [SAR 5906:5906 DAR 2:1], 8.17 fps, 8.20 tbr, 8.20 tbn, 8.20 tbc\n",
+      "Stream mapping:\n",
+      "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
+      "Press [q] to stop, [?] for help\n",
+      "[libx264 @ 0x563be6403cc0] using SAR=1/1\n",
+      "[libx264 @ 0x563be6403cc0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x563be6403cc0] profile High, level 3.2, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x563be6403cc0] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=8 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "Output #0, mp4, to '../videos/substemp_tot2_mon.mp4':\n",
+      "  Metadata:\n",
+      "    encoder         : Lavf58.45.100\n",
+      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1500x750 [SAR 1:1 DAR 2:1], q=-1--1, 8.20 fps, 10496 tbn, 8.20 tbc\n",
+      "    Metadata:\n",
+      "      encoder         : Lavc58.91.100 libx264\n",
+      "    Side data:\n",
+      "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
+      "frame=  492 fps=192 q=-1.0 Lsize=    3357kB time=00:00:59.63 bitrate= 461.2kbits/s speed=23.2x    \n",
+      "video:3351kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.198537%\n",
+      "[libx264 @ 0x563be6403cc0] frame I:2     Avg QP:16.98  size: 67124\n",
+      "[libx264 @ 0x563be6403cc0] frame P:124   Avg QP:22.47  size: 13966\n",
+      "[libx264 @ 0x563be6403cc0] frame B:366   Avg QP:27.05  size:  4274\n",
+      "[libx264 @ 0x563be6403cc0] consecutive B-frames:  0.8%  0.0%  0.0% 99.2%\n",
+      "[libx264 @ 0x563be6403cc0] mb I  I16..4: 19.6% 60.7% 19.6%\n",
+      "[libx264 @ 0x563be6403cc0] mb P  I16..4:  0.3%  2.7%  0.8%  P16..4:  8.5%  5.0%  2.8%  0.0%  0.0%    skip:79.9%\n",
+      "[libx264 @ 0x563be6403cc0] mb B  I16..4:  0.1%  0.4%  0.1%  B16..8:  6.8%  1.9%  0.9%  direct: 2.5%  skip:87.3%  L0:43.7% L1:43.2% BI:13.1%\n",
+      "[libx264 @ 0x563be6403cc0] 8x8 transform intra:70.6% inter:70.2%\n",
+      "[libx264 @ 0x563be6403cc0] coded y,uvDC,uvAC intra: 46.4% 52.6% 36.0% inter: 6.1% 5.2% 1.8%\n",
+      "[libx264 @ 0x563be6403cc0] i16 v,h,dc,p: 47% 19% 10% 24%\n",
+      "[libx264 @ 0x563be6403cc0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 19% 13% 34%  4%  7%  8%  6%  5%  5%\n",
+      "[libx264 @ 0x563be6403cc0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 13% 19%  6%  7%  8%  7%  7%  5%\n",
+      "[libx264 @ 0x563be6403cc0] i8c dc,h,v,p: 58% 15% 16% 12%\n",
+      "[libx264 @ 0x563be6403cc0] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x563be6403cc0] ref P L0: 53.7% 12.7% 19.0% 14.6%\n",
+      "[libx264 @ 0x563be6403cc0] ref B L0: 82.9% 12.3%  4.8%\n",
+      "[libx264 @ 0x563be6403cc0] ref B L1: 95.7%  4.3%\n",
+      "[libx264 @ 0x563be6403cc0] kb/s:457.39\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Make video and delete frames\n",
     "os.system(f'ffmpeg -y -r {framerate} -f image2 -s 1920x1080 -i ../videos/{prefix}_%04d.png -vcodec libx264 -crf 25  -pix_fmt yuv420p ../videos/{prefix}.mp4')\n",
     "os.system(f'rm -r ../videos/{prefix}*.png')"
    ]
