Clean up all and write README

--- a/notebooks/Calc_ensemble.ipynb
+++ b/notebooks/Calc_ensemble.ipynb
@@ -30,8 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#year0,year1 = 1851,2000\n",
-    "year0,year1 = 1951,2100"
+    "#year0 = 1851\n",
+    "year0 = 1951\n",
+    "\n",
+    "year1 = year0+149"
    ]
   },
   {
