--- a/notebooks/Read_alldata.ipynb
+++ b/notebooks/Read_alldata.ipynb
@@ -33,8 +33,8 @@
    "source": [
     "option = 'detrend_mix_biasadj_'\n",
     "\n",
-    "year0,year1 = 1951,2100\n",
-    "#year0,year1 = 1851,2000"
+    "year0 = 1951\n",
+    "#year0 = 1851"
    ]
   },
   {
@@ -80,6 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "year1 = year0+149\n",
     "nyears = year1-year0+1\n",
     "rftime = np.arange(nyears)\n",
     "basin = ut.basin[:5]\n",
@@ -254,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(f'../data/temperature_ctrl.nc')\n",
+    "ds = xr.open_dataset(f'../data/temperature_ann_ctrl.nc')\n",
     "tctrl = ds.temp\n",
     "ds.close()\n",
     "\n",
@@ -263,7 +264,7 @@
     "if ready['totl']:\n",
     "    orf  = np.zeros((len(rftime),len(exp),len(basin)))\n",
     "    \n",
-    "    ds = xr.open_dataset(f'../data/temperature_totl.nc')\n",
+    "    ds = xr.open_dataset(f'../data/temperature_ann_totl.nc')\n",
     "    dtemp = ds.temp - tctrl\n",
     "    ds.close()\n",
     "\n",
@@ -296,7 +297,7 @@
    "source": [
     "for e,ee in enumerate(exp):\n",
     "    if ready[ee]:\n",
-    "        ds = xr.open_dataset(f'../data/temperature_{ee}.nc')\n",
+    "        ds = xr.open_dataset(f'../data/temperature_ann_{ee}.nc')\n",
     "        orf[:,e,:] = ds.temp - tctrl\n",
     "        ds.close()"
    ]
