--- a/notebooks/Read_ece_ts_oceantemp.ipynb
+++ b/notebooks/Read_ece_ts_oceantemp.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
    "metadata": {},
    "outputs": [],
@@ -31,17 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b4d0d972-4bad-4286-9588-d900752dd4d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run = 'tot2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "67b42e8d-9f9e-4806-a2c9-c335ca093529",
    "metadata": {},
    "outputs": [],
@@ -58,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "26569e4c-3ead-4302-a760-4f1d20e79e29",
    "metadata": {},
    "outputs": [],
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8d46d7fb-6f88-4cae-adcb-668127be6b51",
    "metadata": {
     "tags": []
@@ -92,7 +82,7 @@
     "        ds = xr.open_dataset(fname)\n",
     "        nmonths += len(ds.time_counter)\n",
     "        ds.close()\n",
-    "    print(nmonths, 'months = ',int(np.floor(nmonths/12)),'y',int(nmonths-12*np.floor(nmonths/12)),'m')\n",
+    "    print(run,':',nmonths, 'months = ',int(np.floor(nmonths/12)),'y',int(nmonths-12*np.floor(nmonths/12)),'m')\n",
     "\n",
     "    #Calculate basin-average annual time series\n",
     "    tbas = np.zeros((nmonths,len(volume.basin)))\n",
@@ -122,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a5c949d9-8c9a-40ef-8190-8eeeaa92d9e5",
    "metadata": {
     "tags": []
@@ -139,7 +129,7 @@
     "        ds = xr.open_dataset(fname)\n",
     "        nyears += int(np.floor(len(ds.time_counter)/12))\n",
     "        ds.close()\n",
-    "    print(nyears, 'years')\n",
+    "    print(run,':',nyears, 'years')\n",
     "\n",
     "    #Get seconds per month\n",
     "    ds = xr.open_dataset('../data/ecefiles/n011/n011_1m_18500101_18501231_grid_T.nc')\n",
@@ -175,7 +165,7 @@
     "\n",
     "    temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':ut.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
     "    ds = xr.Dataset({'temp':temp2})\n",
-    "    savename = f'../data/temperature_{run}.nc'\n",
+    "    savename = f'../data/temperature_ann_{run}.nc'\n",
     "    ds.to_netcdf(savename,mode='w')\n",
     "    ds.close()\n",
     "    print('\\n','Saved',savename) "
@@ -183,28 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "13817148-7825-43cd-9c78-fdf78b345960",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "492 months =  41 y 0 m\n",
-      "Saved ../data/temperature_mon_tot2.nc                                                                                      \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "save_monthly(run)\n",
-    "#save_annual(run)"
+    "runs = ['ctrl','hal2','half','tot2','totl','spin','quar']\n",
+    "\n",
+    "for run in runs:\n",
+    "    save_annual(run)\n",
+    "    #save_monthly(run)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752a20f2-5d6d-4a4b-a348-d779feb1fdd7",
+   "id": "73e646f8-0376-485a-9aae-09d0d7306304",
    "metadata": {},
    "outputs": [],
    "source": []
