--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "492 41 0\n"
+      "586 48 10\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tot2 492 months = 41 y 0 m\n",
+      "tot2 586 months = 48 y 10 m\n",
       "n011 2400 months = 200 y 0 m\n"
      ]
     }
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3f4a8029-9d95-405f-ae51-20b8082ef0b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "cmap = 'cmo.balance'\n",
-    "vmin = -1\n",
-    "vmax = 1\n",
+    "vmin = -2\n",
+    "vmax = 2\n",
     "\n",
     "mpl.rcParams['figure.figsize'] = (10,5)\n",
     "mpl.rcParams['figure.subplot.wspace'] = .15\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e30d641f-f1a7-40ee-908e-2469739a9fdf",
    "metadata": {
     "tags": []
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 491 of 492 months\r"
+      "Saved 585 of 586 months\r"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "9756b7e2-fe9d-481f-b20b-70d0d8fb3771",
    "metadata": {
     "tags": []
@@ -277,42 +277,42 @@
       "  libpostproc    55.  7.100 / 55.  7.100\n",
       "Input #0, image2, from '../videos/substemp_tot2_mon_%04d.png':\n",
       "  Duration: 00:01:00.00, start: 0.000000, bitrate: N/A\n",
-      "    Stream #0:0: Video: png, rgba(pc), 1500x750 [SAR 5906:5906 DAR 2:1], 8.17 fps, 8.20 tbr, 8.20 tbn, 8.20 tbc\n",
+      "    Stream #0:0: Video: png, rgba(pc), 1500x750 [SAR 5906:5906 DAR 2:1], 9.75 fps, 9.77 tbr, 9.77 tbn, 9.77 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "[libx264 @ 0x563be6403cc0] using SAR=1/1\n",
-      "[libx264 @ 0x563be6403cc0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x563be6403cc0] profile High, level 3.2, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x563be6403cc0] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=8 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "[libx264 @ 0x559b342e90c0] using SAR=1/1\n",
+      "[libx264 @ 0x559b342e90c0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x559b342e90c0] profile High, level 3.2, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x559b342e90c0] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=9 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mp4, to '../videos/substemp_tot2_mon.mp4':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.45.100\n",
-      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1500x750 [SAR 1:1 DAR 2:1], q=-1--1, 8.20 fps, 10496 tbn, 8.20 tbc\n",
+      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1500x750 [SAR 1:1 DAR 2:1], q=-1--1, 9.77 fps, 18752 tbn, 9.77 tbc\n",
       "    Metadata:\n",
       "      encoder         : Lavc58.91.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=  492 fps=192 q=-1.0 Lsize=    3357kB time=00:00:59.63 bitrate= 461.2kbits/s speed=23.2x    \n",
-      "video:3351kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.198537%\n",
-      "[libx264 @ 0x563be6403cc0] frame I:2     Avg QP:16.98  size: 67124\n",
-      "[libx264 @ 0x563be6403cc0] frame P:124   Avg QP:22.47  size: 13966\n",
-      "[libx264 @ 0x563be6403cc0] frame B:366   Avg QP:27.05  size:  4274\n",
-      "[libx264 @ 0x563be6403cc0] consecutive B-frames:  0.8%  0.0%  0.0% 99.2%\n",
-      "[libx264 @ 0x563be6403cc0] mb I  I16..4: 19.6% 60.7% 19.6%\n",
-      "[libx264 @ 0x563be6403cc0] mb P  I16..4:  0.3%  2.7%  0.8%  P16..4:  8.5%  5.0%  2.8%  0.0%  0.0%    skip:79.9%\n",
-      "[libx264 @ 0x563be6403cc0] mb B  I16..4:  0.1%  0.4%  0.1%  B16..8:  6.8%  1.9%  0.9%  direct: 2.5%  skip:87.3%  L0:43.7% L1:43.2% BI:13.1%\n",
-      "[libx264 @ 0x563be6403cc0] 8x8 transform intra:70.6% inter:70.2%\n",
-      "[libx264 @ 0x563be6403cc0] coded y,uvDC,uvAC intra: 46.4% 52.6% 36.0% inter: 6.1% 5.2% 1.8%\n",
-      "[libx264 @ 0x563be6403cc0] i16 v,h,dc,p: 47% 19% 10% 24%\n",
-      "[libx264 @ 0x563be6403cc0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 19% 13% 34%  4%  7%  8%  6%  5%  5%\n",
-      "[libx264 @ 0x563be6403cc0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 28% 13% 19%  6%  7%  8%  7%  7%  5%\n",
-      "[libx264 @ 0x563be6403cc0] i8c dc,h,v,p: 58% 15% 16% 12%\n",
-      "[libx264 @ 0x563be6403cc0] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x563be6403cc0] ref P L0: 53.7% 12.7% 19.0% 14.6%\n",
-      "[libx264 @ 0x563be6403cc0] ref B L0: 82.9% 12.3%  4.8%\n",
-      "[libx264 @ 0x563be6403cc0] ref B L1: 95.7%  4.3%\n",
-      "[libx264 @ 0x563be6403cc0] kb/s:457.39\n"
+      "frame=  586 fps=204 q=-1.0 Lsize=    2645kB time=00:00:59.69 bitrate= 363.0kbits/s speed=20.8x    \n",
+      "video:2638kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.293234%\n",
+      "[libx264 @ 0x559b342e90c0] frame I:3     Avg QP:16.37  size: 67227\n",
+      "[libx264 @ 0x559b342e90c0] frame P:148   Avg QP:21.88  size:  9406\n",
+      "[libx264 @ 0x559b342e90c0] frame B:435   Avg QP:26.49  size:  2544\n",
+      "[libx264 @ 0x559b342e90c0] consecutive B-frames:  0.9%  0.3%  0.5% 98.3%\n",
+      "[libx264 @ 0x559b342e90c0] mb I  I16..4: 24.6% 56.1% 19.3%\n",
+      "[libx264 @ 0x559b342e90c0] mb P  I16..4:  0.4%  2.4%  0.5%  P16..4:  9.6%  4.5%  2.4%  0.0%  0.0%    skip:80.3%\n",
+      "[libx264 @ 0x559b342e90c0] mb B  I16..4:  0.1%  0.4%  0.0%  B16..8:  6.8%  1.4%  0.6%  direct: 1.4%  skip:89.3%  L0:45.4% L1:46.3% BI: 8.3%\n",
+      "[libx264 @ 0x559b342e90c0] 8x8 transform intra:69.2% inter:76.2%\n",
+      "[libx264 @ 0x559b342e90c0] coded y,uvDC,uvAC intra: 37.0% 43.9% 23.4% inter: 4.5% 3.4% 0.7%\n",
+      "[libx264 @ 0x559b342e90c0] i16 v,h,dc,p: 45% 23% 10% 23%\n",
+      "[libx264 @ 0x559b342e90c0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 20% 10% 38%  4%  6%  7%  6%  4%  4%\n",
+      "[libx264 @ 0x559b342e90c0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 30% 15% 19%  5%  7%  8%  6%  6%  4%\n",
+      "[libx264 @ 0x559b342e90c0] i8c dc,h,v,p: 63% 13% 13% 11%\n",
+      "[libx264 @ 0x559b342e90c0] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x559b342e90c0] ref P L0: 57.2% 11.1% 17.6% 14.1%\n",
+      "[libx264 @ 0x559b342e90c0] ref B L0: 82.3% 13.3%  4.5%\n",
+      "[libx264 @ 0x559b342e90c0] ref B L1: 96.2%  3.8%\n",
+      "[libx264 @ 0x559b342e90c0] kb/s:360.03\n"
      ]
     },
     {
@@ -321,7 +321,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
