Include option to fit control for ORFs

--- a/notebooks/Draftplot_full_ensemble.ipynb
+++ b/notebooks/Draftplot_full_ensemble.ipynb
@@ -52,7 +52,10 @@
    "outputs": [],
    "source": [
     "year0,year1 = 1851,2000\n",
-    "#year0,year1 = 1951,2100"
+    "#year0,year1 = 1951,2100\n",
+    "\n",
+    "option = ''\n",
+    "option = '_fit'"
    ]
   },
   {
@@ -88,7 +91,7 @@
     "fig.supylabel('Sea level rise [cm]',fontsize=9)\n",
     "ax[1,1].set_xlabel('Time [years]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/full_ensemble_{year0}_{year1}.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.savefig(f'../draftfigs/full_ensemble{option}_{year0}_{year1}.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()"
    ]
   },
