--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -41,7 +41,10 @@
    "outputs": [],
    "source": [
     "#year0,year1 = 1851,2000\n",
-    "year0,year1 = 1951,2100"
+    "year0,year1 = 1951,2100\n",
+    "\n",
+    "option = ''\n",
+    "#option = '_fit'"
    ]
   },
   {
@@ -51,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(f'../data/alldata_{year0}_{year1}.nc')\n",
+    "ds = xr.open_dataset(f'../data/alldata{option}_{year0}_{year1}.nc')\n",
     "ds = ds.isel(exp=slice(0,5))"
    ]
   },
@@ -65,7 +68,7 @@
     "ism = 'CISM_NCA'\n",
     "esm = 'EC-Earth3'\n",
     "ssp = '245'\n",
-    "bmp = 'quad'"
+    "bmp = 'lin'"
    ]
   },
   {
@@ -114,7 +117,7 @@
     "ax[1,0].set_ylabel('Cumulative ice mass loss [Gt]')\n",
     "ax[2,0].set_ylabel('Sea level rise [m]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/single_ensemble.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.savefig(f'../draftfigs/single_ensemble{option}.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()\n",
     "ds.close()"
    ]
@@ -123,7 +126,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7a165cb7-f4c5-41c1-a970-59477e66005d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(3,5,sharex=True,sharey='row')\n",
