--- a/notebooks/Plot_perturbations.ipynb
+++ b/notebooks/Plot_perturbations.ipynb
@@ -91,22 +91,37 @@
     "tmax = 150*12\n",
     "nbasins = 5 #5 or 7\n",
     "\n",
-    "fig,ax = plt.subplots(2,nbasins,sharex=True,sharey='row')\n",
+    "fig,ax = plt.subplots(3,nbasins,sharex=True,sharey='row')\n",
     "\n",
     "ctrl = xr.open_dataset(f'../data/temperature_mon_ctrl.nc').isel(time=slice(0,tmax))\n",
+    "\n",
+    "#Get linear fit through control\n",
+    "ctrl2 = ctrl.temp.copy()\n",
+    "for b,bas in enumerate(ctrl.basin.values):\n",
+    "    out = np.polyfit(ctrl.time,ctrl.temp.sel(basin=bas),1)\n",
+    "    ctrl2[:,b] = out[1] + ctrl.time*out[0]\n",
+    "\n",
     "\n",
     "for r,run in enumerate(runs):\n",
     "    ds = xr.open_dataset(f'../data/temperature_mon_{run}.nc').isel(time=slice(0,tmax))\n",
     "    for b,bas in enumerate(ds.basin.values[:nbasins]):\n",
     "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run],label=run)\n",
     "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
+    "        if run != 'ctrl':\n",
+    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
+    "        else:\n",
+    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
+    "        ax[2,b].axhline(0,0,1,c=cols['ctrl'],lw=lws['ctrl'],ls=lss['ctrl'])\n",
     "        ax[0,b].set_title(bas,color=ut.bcol[bas],loc='left')\n",
     "    ds.close()\n",
-    "\n",
+    "    \n",
     "ax[0,0].legend()\n",
     "ax[0,0].set_ylabel('Subsurface Temperature [degC]')\n",
-    "ax[1,0].set_ylabel('Temperature anomaly [degC]')\n",
+    "ax[1,0].set_ylabel('Temp anom from ctrl [degC]')\n",
+    "ax[2,0].set_ylabel('Temp anom from fit through ctrl [degC]')\n",
     "fig.supxlabel('Time [years]')\n",
+    "\n",
+    "plt.savefig(f'../draftfigs/dumfig_perturbation.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()"
    ]
   },
