--- a/notebooks/Read_alldata.ipynb
+++ b/notebooks/Read_alldata.ipynb
@@ -31,38 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "option = 'detrend_mix_biasadj_'\n",
+    "#year0 = 1951\n",
+    "year0 = 1851\n",
     "\n",
-    "year0 = 1951\n",
-    "#year0 = 1851"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29d5e5ab-d525-44cf-8001-80f10eb50491",
-   "metadata": {},
-   "source": [
-    "Indicate which runs are ready"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f4770b-5ad0-424b-be83-36cfd9a27a30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ready = {}\n",
-    "ready['eais'] = False\n",
-    "ready['ross'] = False\n",
-    "ready['amun'] = False\n",
-    "ready['wedd'] = False\n",
-    "ready['pens'] = False\n",
-    "ready['totl'] = False #When True, can remove dummy ORF code below\n",
-    "ready['half'] = False\n",
-    "ready['doub'] = False\n",
-    "\n",
-    "#When all true, can remove TOTL-based ORFs and 'ready'-dependence"
+    "#option = ''\n",
+    "option = '_fit'"
    ]
   },
   {
@@ -157,16 +130,18 @@
    "outputs": [],
    "source": [
     "#Get available ESMs for CMIP6 temperature data\n",
+    "histop = 'detrend_mix_biasadj_'\n",
+    "\n",
     "mods = {}\n",
     "for s,ss in enumerate(ssp):\n",
-    "    ds2 = xr.open_dataset(f'../data/eveline/thetao_{option}sector_timeseries_historical+ssp{ss}_1850_2100.nc')\n",
+    "    ds2 = xr.open_dataset(f'../data/eveline/thetao_{histop}sector_timeseries_historical+ssp{ss}_1850_2100.nc')\n",
     "    mods[ss] = ds2.model.values\n",
     "allmods = set(mods[ssp[0]]) & set(mods[ssp[1]]) & set(mods[ssp[2]])\n",
     "esm = sorted(np.array([mod for mod in allmods]))\n",
     "print(len(esm),esm)\n",
     "\n",
     "#Get coordinates from Eveline's file\n",
-    "ds2 = xr.open_dataset(f'../data/eveline/thetao_{option}sector_timeseries_historical+ssp{ssp[0]}_1850_2100.nc')\n",
+    "ds2 = xr.open_dataset(f'../data/eveline/thetao_{histop}sector_timeseries_historical+ssp{ssp[0]}_1850_2100.nc')\n",
     "ds2 = ds2.sel(year=slice(year0,year1))\n",
     "evbas = ['eais','ross','amun','wedd','apen']\n",
     "\n",
@@ -193,7 +168,7 @@
     "\n",
     "temp = np.zeros((len(time),len(esm),len(ssp),len(basin)))\n",
     "for s,ss in enumerate(ssp):\n",
-    "    ds2 = xr.open_dataset(f'../data/eveline/thetao_{option}sector_timeseries_historical+ssp{ss}_1850_2100.nc')\n",
+    "    ds2 = xr.open_dataset(f'../data/eveline/thetao_{histop}sector_timeseries_historical+ssp{ss}_1850_2100.nc')\n",
     "    ds2 = ds2.sel(year=slice(year0,year1))\n",
     "    for e,es in enumerate(esm):\n",
     "        for b,eb in enumerate(evbas):\n",
@@ -215,27 +190,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "577a9d15-a08a-4180-b0a1-a56f149aad14",
+   "id": "dbba6b3d-a728-4a04-ae8f-2e5435e22e0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orf  = np.zeros((len(rftime),len(exp),len(basin)))\n",
+    "tanom  = np.zeros((len(rftime),len(exp),len(basin)))\n",
     "\n",
     "#Magnitude and time scale of response \n",
     "\n",
-    "pert = 400 #Gt/yr\n",
-    "\n",
-    "mag = [.4,.3,-.3,.4,.1] #degC\n",
-    "tsc = [20,10,20,30,50] #year\n",
-    "\n",
-    "for b,bas in enumerate(basin):\n",
-    "    orf[:,b,b] = mag[b]*(1-np.exp(-rftime/tsc[b]))/pert\n",
+    "mag = [1.2,2,.7,1,1] #degC\n",
+    "tsc = [60,50,100,30,50] #year\n",
+    "faclo = .1\n",
+    "fachi = .6\n",
     "\n",
     "for b,bas in enumerate(basin):\n",
-    "    orf[:,5,b] = orf[:,b,b]\n",
+    "    for e,ee in enumerate(exp[:5]):\n",
+    "        if b==e:\n",
+    "            fac = fachi\n",
+    "        else:\n",
+    "            fac = faclo\n",
+    "        tanom[:,e,b] = fac* mag[b]*(1-np.exp(-rftime/tsc[b]))\n",
     "\n",
-    "orf[:,6,:] = .5* orf[:,5,:]\n",
-    "orf[:,7,:] =  2* orf[:,5,:]"
+    "for b,bas in enumerate(basin):\n",
+    "    tanom[:,5,b] = np.sum(tanom[:,:4,b],axis=1)\n",
+    "\n",
+    "tanom[:,6,:] = .5* tanom[:,5,:]\n",
+    "tanom[:,7,:] =  2* tanom[:,5,:]"
    ]
   },
   {
@@ -251,33 +231,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5346a841-7b0c-4d28-bb64-8763c21608e2",
+   "id": "bcbdc08a-7c65-43bf-a611-15360e7ea4c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(f'../data/temperature_ann_ctrl.nc')\n",
+    "ds = xr.open_dataset(f'../data/temperature_ann_ctrl.nc').isel(basin=slice(0,5))\n",
     "tctrl = ds.temp\n",
     "ds.close()\n",
     "\n",
-    "pert = 400\n",
-    "\n",
-    "if ready['totl']:\n",
-    "    orf  = np.zeros((len(rftime),len(exp),len(basin)))\n",
-    "    \n",
-    "    ds = xr.open_dataset(f'../data/temperature_ann_totl.nc')\n",
-    "    dtemp = ds.temp - tctrl\n",
-    "    ds.close()\n",
-    "\n",
-    "    #Individual basin responses\n",
+    "#Overwrite control with linear fit\n",
+    "if option=='_fit':\n",
     "    for b,bas in enumerate(basin):\n",
-    "        orf[:,b,b] = dtemp.sel(basin=bas)\n",
+    "        out = np.polyfit(rftime,tctrl[:,b],1)\n",
+    "        tctrl[:,b] = out[1] + rftime*out[0]\n",
     "\n",
-    "    #TOTL\n",
-    "    orf[:,5,:] = dtemp\n",
+    "ds = xr.open_dataset(f'../data/temperature_ann_tot2.nc').isel(basin=slice(0,5))\n",
+    "yavail = len(ds.time)\n",
+    "print(yavail)\n",
+    "dtemp = ds.temp - tctrl.isel(time=slice(0,yavail))\n",
+    "ds.close()\n",
     "\n",
-    "    #HALF and DOUB\n",
-    "    orf[:,6,:] = .5* orf[:,5,:]\n",
-    "    orf[:,7,:] =  2* orf[:,5,:]"
+    "#Individual basin responses\n",
+    "for b,bas in enumerate(basin):\n",
+    "    for e,ee in enumerate(exp[:5]):\n",
+    "        if b==e:\n",
+    "            fac = fachi\n",
+    "        else:\n",
+    "            fac = faclo\n",
+    "        tanom[:yavail,e,b] = fac* dtemp.sel(basin=bas)\n",
+    "\n",
+    "#TOTL\n",
+    "tanom[:yavail,5,:] = dtemp\n",
+    "\n",
+    "#HALF and DOUB\n",
+    "tanom[:yavail,6,:] = .5* tanom[:yavail,5,:]\n",
+    "tanom[:yavail,7,:] =  2* tanom[:yavail,5,:]"
    ]
   },
   {
@@ -296,10 +284,14 @@
    "outputs": [],
    "source": [
     "for e,ee in enumerate(exp):\n",
-    "    if ready[ee]:\n",
+    "    try:\n",
     "        ds = xr.open_dataset(f'../data/temperature_ann_{ee}.nc')\n",
-    "        orf[:,e,:] = ds.temp - tctrl\n",
-    "        ds.close()"
+    "        yavail = len(ds.time)\n",
+    "        print(ee,yavail)\n",
+    "        tanom[:yavail,e,:] = ds.temp - tctrl.isel(time=slice(0,yavail))\n",
+    "        ds.close()\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -320,11 +312,12 @@
     "irf2  = xr.DataArray(irf,dims=('rftime','ism','basin'),coords={'rftime':rftime,'ism':ism,'basin':basin},attrs={'unit':'Gt/yr per m/yr','long_name':'ice mass loss response function to increased basal melt'})\n",
     "srf2  = xr.DataArray(srf,dims=('rftime','ism','basin'),coords={'rftime':rftime,'ism':ism,'basin':basin},attrs={'unit':'m/yr per m/yr','long_name':'sea level response function to increased basal melt'})\n",
     "temp2 = xr.DataArray(temp,dims=('time','esm','ssp','basin'),coords={'time':time,'esm':esm,'ssp':ssp,'basin':basin},attrs={'unit':'degrees Celcius','long_name':'temperature anomaly from pre-industrial control'})\n",
-    "orf2  = xr.DataArray(orf,dims=('rftime','exp','basin'),coords={'rftime':rftime,'exp':exp,'basin':basin},attrs={'unit':'degrees Celcius per Gt/yr','long_name':'ocean response function to increased mass loss'})\n",
+    "tanom2  = xr.DataArray(tanom,dims=('rftime','exp','basin'),coords={'rftime':rftime,'exp':exp,'basin':basin},attrs={'unit':'degrees Celcius','long_name':'ocean response function to increased mass loss'})\n",
     "\n",
-    "ds = xr.Dataset({'irf':irf2,'srf':srf2,'temp':temp2,'orf':orf2})\n",
-    "ds.to_netcdf(f'../data/alldata_{year0}_{year1}.nc',mode='w')\n",
-    "ds"
+    "ds = xr.Dataset({'irf':irf2,'srf':srf2,'temp':temp2,'tanom':tanom2})\n",
+    "savename = f'../data/alldata{option}_{year0}_{year1}.nc'\n",
+    "ds.to_netcdf(savename,mode='w')\n",
+    "print('Saved',savename)"
    ]
   },
   {
@@ -403,10 +396,10 @@
     "\n",
     "for e,ee in enumerate(exp):\n",
     "    for b,bas in enumerate(basin):\n",
-    "        ax[e,b].plot(rftime,1000*orf[:,e,b],c=ut.bcol[bas])\n",
+    "        ax[e,b].plot(rftime,tanom[:,e,b],c=ut.bcol[bas])\n",
     "    ax[e,0].set_ylabel(ee)\n",
     "\n",
-    "fig.supylabel('ORF [degC per 1000 Gt/yr]')\n",
+    "fig.supylabel('Temperature response [degC]')\n",
     "plt.show()"
    ]
   },
@@ -414,6 +407,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "848cf179-3112-4cf9-b52d-ddd13995b33e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f371b2-357d-41b5-a186-bfab8244f9fe",
    "metadata": {},
    "outputs": [],
    "source": []
