--- a/notebooks/Read_ece_ts_oceantemp.ipynb
+++ b/notebooks/Read_ece_ts_oceantemp.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "67b42e8d-9f9e-4806-a2c9-c335ca093529",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "26569e4c-3ead-4302-a760-4f1d20e79e29",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8d46d7fb-6f88-4cae-adcb-668127be6b51",
    "metadata": {
     "tags": []
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a5c949d9-8c9a-40ef-8190-8eeeaa92d9e5",
    "metadata": {
     "tags": []
@@ -173,16 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "13817148-7825-43cd-9c78-fdf78b345960",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tot2 : 716 months =  59 y 8 m\n",
+      "Saved ../data/temperature_mon_tot2.nc                                                                                      \n"
+     ]
+    }
+   ],
    "source": [
-    "runs = ['ctrl','hal2','half','tot2','totl','spin','quar']\n",
+    "runs = ['tot2']\n",
+    "#runs = ['ctrl','hal2','half','tot2','totl','spin','quar']\n",
     "\n",
     "for run in runs:\n",
-    "    save_annual(run)\n",
-    "    #save_monthly(run)"
+    "    #save_annual(run)\n",
+    "    save_monthly(run)"
    ]
   },
   {
