update ORF plots

--- a/notebooks/Draftplot_ORF.ipynb
+++ b/notebooks/Draftplot_ORF.ipynb
@@ -38,7 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset('../data/alldata_1951_2100.nc')"
+    "#option = ''\n",
+    "option = '_fit'\n",
+    "\n",
+    "pert = 400\n",
+    "\n",
+    "ds = xr.open_dataset(f'../data/alldata{option}_1951_2100.nc')"
    ]
   },
   {
@@ -54,7 +59,7 @@
     "mpl.rcParams['figure.subplot.right'] = .99\n",
     "mpl.rcParams['figure.subplot.bottom'] = .1\n",
     "mpl.rcParams['figure.subplot.top'] = .95\n",
-    "mpl.rcParams['figure.figsize'] = (7,4)\n",
+    "mpl.rcParams['figure.figsize'] = (7,5)\n",
     "\n",
     "basinname = ['East Ant.','Ross','Amundsen','Weddell','Peninsula']"
    ]
@@ -69,31 +74,15 @@
     "fig,ax = plt.subplots(5,5,sharex=True,sharey=True)\n",
     "for e,ex in enumerate(ds.exp.values[:5]):\n",
     "    for b,bas in enumerate(ds.basin.values):\n",
-    "        ax[b,e].plot(ds.rftime,ds.orf[:,e,b],c=ut.bcol[bas])\n",
+    "        ax[b,e].plot(ds.rftime,1000*ds.tanom[:,e,b]/pert,c=ut.bcol[bas])\n",
     "        if b==0:\n",
     "            ax[b,e].set_title(f'{ex}')\n",
     "        if e==0:\n",
     "            ax[b,e].set_ylabel(basinname[b])\n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
-    "fig.supylabel('Ocean Response Function [degC / Gt/yr]',fontsize=9)\n",
+    "fig.supylabel('Ocean Response Function [degC / 1000 Gt/yr]',fontsize=9)\n",
     "\n",
-    "plt.savefig(f'../draftfigs/all_orfs.png',dpi=450)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25d5d86d-481b-4577-8e1f-6c61bcfb5dd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax = plt.subplots(1,1,sharex=True,sharey=True,figsize=(7,7))\n",
-    "for b,bas in enumerate(ds.basin.values):\n",
-    "    ax.plot(ds.rftime,400*ds.orf[:,b,b],c=ut.bcol[bas])\n",
-    "ax.set_xlim([0,35])\n",
-    "ax.set_ylim([-1,1])\n",
-    "\n",
+    "plt.savefig(f'../draftfigs/all_orfs{option}.png',dpi=450)\n",
     "plt.show()"
    ]
   },
