--- a/notebooks/Calc_ensemble.ipynb
+++ b/notebooks/Calc_ensemble.ipynb
@@ -405,7 +405,210 @@
       "lin  585 INM-CM5-0      ISSM_UCI    0.063  0.191\n",
       "lin  585 INM-CM5-0      MALI_DOE    0.033  0.136\n",
       "lin  585 INM-CM5-0      PISM_DMI    0.092  0.681\n",
-      "lin  585 INM-CM5-0      PISM_PIK    0.054  0.257\n"
+      "lin  585 INM-CM5-0      PISM_PIK    0.054  0.257\n",
+      "lin  585 INM-CM5-0      SICO_ILTS   0.085  0.361\n",
+      "lin  585 MIROC6         CISM_NCA    0.071  0.262\n",
+      "lin  585 MIROC6         FETI_ULB    0.117  0.569\n",
+      "lin  585 MIROC6         GRIS_LSC    0.062  0.144\n",
+      "lin  585 MIROC6         IMAU_UU     0.152  0.617\n",
+      "lin  585 MIROC6         ISSM_UCI    0.167  0.482\n",
+      "lin  585 MIROC6         MALI_DOE    0.093  0.351\n",
+      "lin  585 MIROC6         PISM_DMI    0.217  1.597\n",
+      "lin  585 MIROC6         PISM_PIK    0.154  0.664\n",
+      "lin  585 MIROC6         SICO_ILTS   0.236  0.976\n",
+      "lin  585 MPI-ESM1-2-LR  CISM_NCA    0.055  0.173\n",
+      "lin  585 MPI-ESM1-2-LR  FETI_ULB    0.079  0.347\n",
+      "lin  585 MPI-ESM1-2-LR  GRIS_LSC    0.037  0.013\n",
+      "lin  585 MPI-ESM1-2-LR  IMAU_UU     0.146  0.464\n",
+      "lin  585 MPI-ESM1-2-LR  ISSM_UCI    0.144  0.329\n",
+      "lin  585 MPI-ESM1-2-LR  MALI_DOE    0.081  0.233\n",
+      "lin  585 MPI-ESM1-2-LR  PISM_DMI    0.191  0.895\n",
+      "lin  585 MPI-ESM1-2-LR  PISM_PIK    0.122  0.442\n",
+      "lin  585 MPI-ESM1-2-LR  SICO_ILTS   0.150  0.569\n",
+      "lin  585 MRI-ESM2-0     CISM_NCA    0.037  0.133\n",
+      "lin  585 MRI-ESM2-0     FETI_ULB    0.060  0.294\n",
+      "lin  585 MRI-ESM2-0     GRIS_LSC    0.025  0.018\n",
+      "lin  585 MRI-ESM2-0     IMAU_UU     0.094  0.338\n",
+      "lin  585 MRI-ESM2-0     ISSM_UCI    0.085  0.229\n",
+      "lin  585 MRI-ESM2-0     MALI_DOE    0.052  0.179\n",
+      "lin  585 MRI-ESM2-0     PISM_DMI    0.081  0.657\n",
+      "lin  585 MRI-ESM2-0     PISM_PIK    0.090  0.377\n",
+      "lin  585 MRI-ESM2-0     SICO_ILTS   0.105  0.502\n",
+      "lin  585 NorESM2-MM     CISM_NCA    0.033  0.099\n",
+      "lin  585 NorESM2-MM     FETI_ULB    0.046  0.172\n",
+      "lin  585 NorESM2-MM     GRIS_LSC    0.006  0.025\n",
+      "lin  585 NorESM2-MM     IMAU_UU     0.061  0.157\n",
+      "lin  585 NorESM2-MM     ISSM_UCI    0.056  0.179\n",
+      "lin  585 NorESM2-MM     MALI_DOE    0.038  0.088\n",
+      "lin  585 NorESM2-MM     PISM_DMI    0.086 -0.030\n",
+      "lin  585 NorESM2-MM     PISM_PIK    0.070  0.379\n",
+      "lin  585 NorESM2-MM     SICO_ILTS   0.096  0.114\n",
+      "Saved lin\n",
+      "quad 126 ACCESS-CM2     CISM_NCA    0.043  0.103\n",
+      "quad 126 ACCESS-CM2     FETI_ULB    0.058  0.222\n",
+      "quad 126 ACCESS-CM2     GRIS_LSC    0.008  0.060\n",
+      "quad 126 ACCESS-CM2     IMAU_UU     0.157  0.524\n",
+      "quad 126 ACCESS-CM2     ISSM_UCI    0.137  0.259\n",
+      "quad 126 ACCESS-CM2     MALI_DOE    0.070  0.168\n",
+      "quad 126 ACCESS-CM2     PISM_DMI    0.136  0.873\n",
+      "quad 126 ACCESS-CM2     PISM_PIK    0.057  0.192\n",
+      "quad 126 ACCESS-CM2     SICO_ILTS   0.125  0.401\n",
+      "quad 126 CAMS-CSM1-0    CISM_NCA    0.035  0.087\n",
+      "quad 126 CAMS-CSM1-0    FETI_ULB    0.047  0.203\n",
+      "quad 126 CAMS-CSM1-0    GRIS_LSC    0.015  0.147\n",
+      "quad 126 CAMS-CSM1-0    IMAU_UU     0.124  0.395\n",
+      "quad 126 CAMS-CSM1-0    ISSM_UCI    0.110  0.213\n",
+      "quad 126 CAMS-CSM1-0    MALI_DOE    0.058  0.147\n",
+      "quad 126 CAMS-CSM1-0    PISM_DMI    0.101  0.972\n",
+      "quad 126 CAMS-CSM1-0    PISM_PIK    0.049  0.227\n",
+      "quad 126 CAMS-CSM1-0    SICO_ILTS   0.106  0.364\n",
+      "quad 126 CAS-ESM2-0     CISM_NCA    0.090  0.700\n",
+      "quad 126 CAS-ESM2-0     FETI_ULB    0.151  1.870\n",
+      "quad 126 CAS-ESM2-0     GRIS_LSC    0.069  0.475\n",
+      "quad 126 CAS-ESM2-0     IMAU_UU     0.199  1.590\n",
+      "quad 126 CAS-ESM2-0     ISSM_UCI    0.190  1.062\n",
+      "quad 126 CAS-ESM2-0     MALI_DOE    0.112  0.869\n",
+      "quad 126 CAS-ESM2-0     PISM_DMI    0.228  9.524\n",
+      "quad 126 CAS-ESM2-0     PISM_PIK    0.205  4.243\n",
+      "quad 126 CAS-ESM2-0     SICO_ILTS   0.304  2.556\n",
+      "quad 126 CMCC-ESM2      CISM_NCA    0.022  0.086\n",
+      "quad 126 CMCC-ESM2      FETI_ULB    0.025  0.294\n",
+      "quad 126 CMCC-ESM2      GRIS_LSC    0.012  0.285\n",
+      "quad 126 CMCC-ESM2      IMAU_UU     0.059  0.295\n",
+      "quad 126 CMCC-ESM2      ISSM_UCI    0.063  0.150\n",
+      "quad 126 CMCC-ESM2      MALI_DOE    0.038  0.118\n",
+      "quad 126 CMCC-ESM2      PISM_DMI    0.092  0.596\n",
+      "quad 126 CMCC-ESM2      PISM_PIK    0.048  0.953\n",
+      "quad 126 CMCC-ESM2      SICO_ILTS   0.046  0.255\n",
+      "quad 126 CanESM5        CISM_NCA    0.051  0.208\n",
+      "quad 126 CanESM5        FETI_ULB    0.079  0.644\n",
+      "quad 126 CanESM5        GRIS_LSC    0.038  0.172\n",
+      "quad 126 CanESM5        IMAU_UU     0.151  0.658\n",
+      "quad 126 CanESM5        ISSM_UCI    0.157  0.386\n",
+      "quad 126 CanESM5        MALI_DOE    0.093  0.329\n",
+      "quad 126 CanESM5        PISM_DMI    0.192  2.976\n",
+      "quad 126 CanESM5        PISM_PIK    0.122  1.176\n",
+      "quad 126 CanESM5        SICO_ILTS   0.162  0.915\n",
+      "quad 126 EC-Earth3      CISM_NCA    0.101  0.482\n",
+      "quad 126 EC-Earth3      FETI_ULB    0.161  1.242\n",
+      "quad 126 EC-Earth3      GRIS_LSC    0.065  0.647\n",
+      "quad 126 EC-Earth3      IMAU_UU     0.322  1.625\n",
+      "quad 126 EC-Earth3      ISSM_UCI    0.302  0.850\n",
+      "quad 126 EC-Earth3      MALI_DOE    0.174  0.751\n",
+      "quad 126 EC-Earth3      PISM_DMI    0.346  6.452\n",
+      "quad 126 EC-Earth3      PISM_PIK    0.209  3.396\n",
+      "quad 126 EC-Earth3      SICO_ILTS   0.319  2.284\n",
+      "quad 126 EC-Earth3-Veg  CISM_NCA    0.009  0.033\n",
+      "quad 126 EC-Earth3-Veg  FETI_ULB   -0.013  0.040\n",
+      "quad 126 EC-Earth3-Veg  GRIS_LSC   -0.029  0.044\n",
+      "quad 126 EC-Earth3-Veg  IMAU_UU     0.073  0.434\n",
+      "quad 126 EC-Earth3-Veg  ISSM_UCI    0.067  0.171\n",
+      "quad 126 EC-Earth3-Veg  MALI_DOE    0.023  0.051\n",
+      "quad 126 EC-Earth3-Veg  PISM_DMI    0.058 -3.264\n",
+      "quad 126 EC-Earth3-Veg  PISM_PIK   -0.028  1.579\n",
+      "quad 126 EC-Earth3-Veg  SICO_ILTS  -0.018 -0.104\n",
+      "quad 126 GFDL-ESM4      CISM_NCA   -0.032 -0.068\n",
+      "quad 126 GFDL-ESM4      FETI_ULB   -0.042 -0.066\n",
+      "quad 126 GFDL-ESM4      GRIS_LSC   -0.027  0.064\n",
+      "quad 126 GFDL-ESM4      IMAU_UU    -0.089 -0.230\n",
+      "quad 126 GFDL-ESM4      ISSM_UCI   -0.093 -0.178\n",
+      "quad 126 GFDL-ESM4      MALI_DOE   -0.050 -0.123\n",
+      "quad 126 GFDL-ESM4      PISM_DMI   -0.091 -0.058\n",
+      "quad 126 GFDL-ESM4      PISM_PIK   -0.042  0.202\n",
+      "quad 126 GFDL-ESM4      SICO_ILTS  -0.114 -0.314\n",
+      "quad 126 INM-CM4-8      CISM_NCA    0.044  0.184\n",
+      "quad 126 INM-CM4-8      FETI_ULB    0.075  0.503\n",
+      "quad 126 INM-CM4-8      GRIS_LSC    0.040  0.220\n",
+      "quad 126 INM-CM4-8      IMAU_UU     0.137  0.611\n",
+      "quad 126 INM-CM4-8      ISSM_UCI    0.127  0.354\n",
+      "quad 126 INM-CM4-8      MALI_DOE    0.073  0.304\n",
+      "quad 126 INM-CM4-8      PISM_DMI    0.146  3.173\n",
+      "quad 126 INM-CM4-8      PISM_PIK    0.101  0.878\n",
+      "quad 126 INM-CM4-8      SICO_ILTS   0.163  0.941\n",
+      "quad 126 INM-CM5-0      CISM_NCA    0.005  0.028\n",
+      "quad 126 INM-CM5-0      FETI_ULB    0.011  0.093\n",
+      "quad 126 INM-CM5-0      GRIS_LSC    0.008  0.011\n",
+      "quad 126 INM-CM5-0      IMAU_UU     0.013  0.078\n",
+      "quad 126 INM-CM5-0      ISSM_UCI    0.008  0.052\n",
+      "quad 126 INM-CM5-0      MALI_DOE    0.002  0.033\n",
+      "quad 126 INM-CM5-0      PISM_DMI    0.010  0.414\n",
+      "quad 126 INM-CM5-0      PISM_PIK    0.012  0.167\n",
+      "quad 126 INM-CM5-0      SICO_ILTS   0.026  0.115\n",
+      "quad 126 MIROC6         CISM_NCA    0.029  0.152\n",
+      "quad 126 MIROC6         FETI_ULB    0.055  0.397\n",
+      "quad 126 MIROC6         GRIS_LSC    0.020  0.114\n",
+      "quad 126 MIROC6         IMAU_UU     0.081  0.436\n",
+      "quad 126 MIROC6         ISSM_UCI    0.073  0.270\n",
+      "quad 126 MIROC6         MALI_DOE    0.039  0.207\n",
+      "quad 126 MIROC6         PISM_DMI    0.086  2.903\n",
+      "quad 126 MIROC6         PISM_PIK    0.070  0.950\n",
+      "quad 126 MIROC6         SICO_ILTS   0.107  0.630\n",
+      "quad 126 MPI-ESM1-2-LR  CISM_NCA    0.036  0.133\n",
+      "quad 126 MPI-ESM1-2-LR  FETI_ULB    0.050  0.369\n",
+      "quad 126 MPI-ESM1-2-LR  GRIS_LSC    0.019  0.159\n",
+      "quad 126 MPI-ESM1-2-LR  IMAU_UU     0.104  0.406\n",
+      "quad 126 MPI-ESM1-2-LR  ISSM_UCI    0.105  0.254\n",
+      "quad 126 MPI-ESM1-2-LR  MALI_DOE    0.062  0.197\n",
+      "quad 126 MPI-ESM1-2-LR  PISM_DMI    0.121  1.765\n",
+      "quad 126 MPI-ESM1-2-LR  PISM_PIK    0.081  0.905\n",
+      "quad 126 MPI-ESM1-2-LR  SICO_ILTS   0.098  0.493\n",
+      "quad 126 MRI-ESM2-0     CISM_NCA    0.020  0.069\n",
+      "quad 126 MRI-ESM2-0     FETI_ULB    0.032  0.177\n",
+      "quad 126 MRI-ESM2-0     GRIS_LSC    0.011  0.072\n",
+      "quad 126 MRI-ESM2-0     IMAU_UU     0.065  0.212\n",
+      "quad 126 MRI-ESM2-0     ISSM_UCI    0.057  0.128\n",
+      "quad 126 MRI-ESM2-0     MALI_DOE    0.036  0.105\n",
+      "quad 126 MRI-ESM2-0     PISM_DMI    0.064  0.926\n",
+      "quad 126 MRI-ESM2-0     PISM_PIK    0.049  0.279\n",
+      "quad 126 MRI-ESM2-0     SICO_ILTS   0.062  0.286\n",
+      "quad 126 NorESM2-MM     CISM_NCA    0.006  0.068\n",
+      "quad 126 NorESM2-MM     FETI_ULB    0.006  0.264\n",
+      "quad 126 NorESM2-MM     GRIS_LSC   -0.023  0.070\n",
+      "quad 126 NorESM2-MM     IMAU_UU     0.017  0.190\n",
+      "quad 126 NorESM2-MM     ISSM_UCI   -0.018  0.088\n",
+      "quad 126 NorESM2-MM     MALI_DOE   -0.007  0.041\n",
+      "quad 126 NorESM2-MM     PISM_DMI   -0.012  0.703\n",
+      "quad 126 NorESM2-MM     PISM_PIK    0.008  0.529\n",
+      "quad 126 NorESM2-MM     SICO_ILTS   0.013  0.122\n",
+      "quad 245 ACCESS-CM2     CISM_NCA    0.049  0.119\n",
+      "quad 245 ACCESS-CM2     FETI_ULB    0.066  0.256\n",
+      "quad 245 ACCESS-CM2     GRIS_LSC    0.008  0.050\n",
+      "quad 245 ACCESS-CM2     IMAU_UU     0.177  0.608\n",
+      "quad 245 ACCESS-CM2     ISSM_UCI    0.157  0.295\n",
+      "quad 245 ACCESS-CM2     MALI_DOE    0.080  0.192\n",
+      "quad 245 ACCESS-CM2     PISM_DMI    0.156  1.273\n",
+      "quad 245 ACCESS-CM2     PISM_PIK    0.066  0.188\n",
+      "quad 245 ACCESS-CM2     SICO_ILTS   0.140  0.451\n",
+      "quad 245 CAMS-CSM1-0    CISM_NCA    0.041  0.107\n",
+      "quad 245 CAMS-CSM1-0    FETI_ULB    0.054  0.242\n",
+      "quad 245 CAMS-CSM1-0    GRIS_LSC    0.015  0.136\n",
+      "quad 245 CAMS-CSM1-0    IMAU_UU     0.145  0.479\n",
+      "quad 245 CAMS-CSM1-0    ISSM_UCI    0.128  0.253\n",
+      "quad 245 CAMS-CSM1-0    MALI_DOE    0.067  0.172\n",
+      "quad 245 CAMS-CSM1-0    PISM_DMI    0.120  1.199\n",
+      "quad 245 CAMS-CSM1-0    PISM_PIK    0.056  0.304\n",
+      "quad 245 CAMS-CSM1-0    SICO_ILTS   0.117  0.412\n",
+      "quad 245 CAS-ESM2-0     CISM_NCA    0.114  0.896\n",
+      "quad 245 CAS-ESM2-0     FETI_ULB    0.181  2.359\n",
+      "quad 245 CAS-ESM2-0     GRIS_LSC    0.094  0.524\n",
+      "quad 245 CAS-ESM2-0     IMAU_UU     0.249  2.153\n",
+      "quad 245 CAS-ESM2-0     ISSM_UCI    0.234  1.274\n",
+      "quad 245 CAS-ESM2-0     MALI_DOE    0.139  1.114\n",
+      "quad 245 CAS-ESM2-0     PISM_DMI    0.285  10.614\n",
+      "quad 245 CAS-ESM2-0     PISM_PIK    0.281  5.788\n",
+      "quad 245 CAS-ESM2-0     SICO_ILTS   0.356  3.031\n",
+      "quad 245 CMCC-ESM2      CISM_NCA    0.035  0.193\n",
+      "quad 245 CMCC-ESM2      FETI_ULB    0.047  0.497\n",
+      "quad 245 CMCC-ESM2      GRIS_LSC    0.023  0.238\n",
+      "quad 245 CMCC-ESM2      IMAU_UU     0.098  0.566\n",
+      "quad 245 CMCC-ESM2      ISSM_UCI    0.094  0.321\n",
+      "quad 245 CMCC-ESM2      MALI_DOE    0.053  0.241\n",
+      "quad 245 CMCC-ESM2      PISM_DMI    0.107  1.899\n",
+      "quad 245 CMCC-ESM2      PISM_PIK    0.088  1.882\n",
+      "quad 245 CMCC-ESM2      SICO_ILTS   0.084  0.589\n",
+      "quad 245 CanESM5        CISM_NCA    0.059  0.243\n",
+      "quad 245 CanESM5        FETI_ULB    0.087  0.671\n",
+      "quad 245 CanESM5        GRIS_LSC    0.049  0.226\n"
      ]
     }
    ],
